# instrumentl-code-test

./: README.md  render.yaml
api/: .gitignore  Gemfile  README.md
api/app/controllers/: query_controller.rb  resources_controller.rb
api/app/models/: resource.rb  resource_faq.rb
api/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
api/config/credentials/: development.yml.enc  production.yml.enc  test.yml.enc
api/config/initializers/: pinecone.rb
api/db/: schema.rb
api/db/migrate/: 20230503211156_create_resources.rb  20230503211327_create_resource_faqs.rb  20230504223945_add_resources.rb  20230506163840_add_indexes.rb
api/lib/: answering_service.rb  open_a_i_client.rb  pinecone_client.rb
api/spec/: rails_helper.rb
api/spec/factories/: resource_faqs.rb  resources.rb
api/spec/models/: resource_spec.rb
api/spec/requests/: query_spec.rb  resources_spec.rb
injest/: README.md  pyproject.toml
injest/injest/: __main__.py  llm.py  vectordb.py
web/: README.md  next.config.js  package.json
web/src/components/: buttonWithSpinner.js  header.js  listOfProducts.js
web/src/data/: products.js
web/src/pages/: _document.js  index.js
web/src/pages/resources/: [slug].js
web/src/utils/: http.js
