[tool.poetry]
name = "injest"
version = "0.1.0"
description = ""
authors = ["Senthil Arivudainambi <me@sent-hil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.x"
langchain = "^0.0.154"
pypdf = "^3.8.1"
openai = "^0.27.6"
pinecone-client = "^2.2.1"
wrapt = "^1.15.0"
unstructured = "^0.6.2"
layoutparser = {extras = ["layoutmodels", "tesseract"], version = "^0.3.4"}
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
